2009-12-02  Robert Millan  <rmh.grub@aybabtu.com>

	Use the same reboot approach on i386 coreboot and qemu as we do on
	BIOS.

	* conf/i386-coreboot.rmk (kernel_img_HEADERS): Add `cpu/reboot.h'.
	(reboot_mod_SOURCES): Remove `kern/i386/reboot.c'.
	* kern/i386/reboot.c: Remove.
	* include/grub/i386/reboot.h (grub_reboot): Export function.
	* kern/i386/pc/startup.S (grub_reboot): Move from here ...
	* kern/i386/realmode.S (grub_reboot): ... to here.  Jump to
	0xf000:0xfff0 instead of 0xffff:0x0000.
	[!GRUB_MACHINE_PCBIOS] (prot_to_real): Do not restore interrupts.
	* kern/i386/qemu/startup.S: Include `"../realmode.S"'.

2009-11-30  Robert Millan  <rmh.grub@aybabtu.com>

	Fix $srcdir != $objdir build.

	* Makefile.in (po/%.po):  Rewrite as ...
	($(foreach lang, $(LINGUAS), $(srcdir)/po/$(lang).po)): ... this.

2009-11-29  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Fix GNU/Hurd grub-install crash.
	* util/grub-probe.c (probe): Try to access `path' only when it is not
	NULL.

2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Correct module naming.

	* video/efi_uga.c (GRUB_MOD_INIT(efi_fb)): Renamed from this ...
	(GRUB_MOD_INIT(efi_uga)): ... to this
	(GRUB_MOD_FINI(efi_fb)): Renamed from this ...
	(GRUB_MOD_FINI(efi_uga)): ... to this
	* video/efi_gop.c (GRUB_MOD_INIT(efi_fb)): Renamed from this ...
	(GRUB_MOD_INIT(efi_gop)): ... to this
	(GRUB_MOD_FINI(efi_fb)): Renamed from this ...
	(GRUB_MOD_FINI(efi_gop)): ... to this

2009-11-28  Robert Millan  <rmh.grub@aybabtu.com>

	* util/mkisofs/mkisofs.c (ld_options): Mark all `arg' strings as
	translatable.
	(usage): Translate `arg' strings using gettext().
	Thanks to Jordi Mallach for the suggestion.

2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	GOP support. Based on patch from Bean
	(http://lists.gnu.org/archive/html/grub-devel/2009-08/msg00384.html)

	* video/efi_gop.c: New file.
	* include/grub/efi/graphics_output.h: Likewise.
	* conf/i386-efi.rmk (pkglib_MODULES): Add `efi_gop.mod'.